infra/sg.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: |
  Creates security groups for ec2,rds,etc
Resources:
  EC2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ec2-ssh-and-3030
      GroupDescription: Allows port 22 and port 3030
      VpcId: !ImportValue network-vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3030
          ToPort: 3030
          CidrIp: 0.0.0.0/0

  RdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: rds-postgresql
      GroupDescription:  Allows access to port 5432
      VpcId: !ImportValue network-vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 5432
        ToPort: 5432
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: "-1"
        CidrIp: 0.0.0.0/0
  PrometheusSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "ec2-prometheus-sg"
      GroupDescription:  "Allow port 9000,9093,9100 and ssh"
      VpcId: !ImportValue network-vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 9090
        ToPort: 9090
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 9093
        ToPort: 9093
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 9100
        ToPort: 9100
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: "-1"
        CidrIp: 0.0.0.0/0
Outputs:
  EC2InstanceSecurityGroupID:
    Description: ID of security group 
    Value: !GetAtt EC2InstanceSecurityGroup.GroupId
    Export: 
      Name: ec2SecurityGroup
  PrometheusSecurityGroupID:
    Description: ID of security group for Prometheus 
    Value: !GetAtt PrometheusSecurityGroup.GroupId
    Export: 
      Name: prometheusSecurityGroup
  RdsSecurityGroupID:
    Description: ID of security group 
    Value: !Ref RdsSecurityGroup
    Export: 
      Name: rdsPostgresSecurityGroup
